Blender 2.8 Beta: Text extrusion cannot be animated #59072

Closed
opened 2018-12-09 17:40:10 +01:00 by Konrad Welz · 7 comments

Operating system: MacOS High Sierra 10.13.6
Graphics card: NVIDIA GTX 980Ti

Blender Version
Broken: 2.8 Beta Hash: 1b6a394d86 Date: 2018-12-03 23:39
Worked: 2.79

I have some text where the extrusion amount animates from 0 to 0.3 over 10 frames. I have set valid keyframes but the text extrusion does not animate.

To Replicate. Start up Blender, create any text, keyframe the extrusion amount at zero, go a few frames later and increase the extrusion amount and add a keyframe.
Nothing happens to the text.

Operating system: MacOS High Sierra 10.13.6 Graphics card: NVIDIA GTX 980Ti **Blender Version** Broken: 2.8 Beta Hash: 1b6a394d862 Date: 2018-12-03 23:39 Worked: 2.79 I have some text where the extrusion amount animates from 0 to 0.3 over 10 frames. I have set valid keyframes but the text extrusion does not animate. To Replicate. Start up Blender, create any text, keyframe the extrusion amount at zero, go a few frames later and increase the extrusion amount and add a keyframe. Nothing happens to the text.
Author

Added subscriber: @KonradWelz

Added subscriber: @KonradWelz

Added subscriber: @brhumphe

Added subscriber: @brhumphe

Confirmed on macOS 10.14 hash 168a6a4bfc. It looks as though the viewport text is only being updated when manipulating the value and curves, but not when changing the frame.

Confirmed on macOS 10.14 hash 168a6a4bfc1. It looks as though the viewport text is only being updated when manipulating the value and curves, but not when changing the frame.

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-12 16:28:43 +01:00

I can confirm this is an issue still with 10eb92035c

The animated result can be seen when you render out the frame, but the state of the text is not updated in the viewport.
I'm guessing this is a depsgraph issue.

I can confirm this is an issue still with 10eb92035c9b8803a9ff2e80b2d026f03c67e4f9 The animated result can be seen when you render out the frame, but the state of the text is not updated in the viewport. I'm guessing this is a depsgraph issue.

This issue was referenced by 8e9c16b0cf

This issue was referenced by 8e9c16b0cf488d3e849405387f7b2e6cf8d7d57a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59072
No description provided.