Fix T59072: Text extrusion cannot be animated